...
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/agreement_disagree"
        android:textAppearance="@style/TextAppearance.LandingTheme.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/agreement_agree_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/agreement_agree_button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
...
